// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/ProductListHeader default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c18 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c13 {
  color: #7d7d7d;
  display: inline-block;
  white-space: pre;
}

.c11 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c16 {
  top: 100%;
}

.c10 {
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
}

.c12 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 0.5rem;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c15 {
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  background-color: #f1f5f5;
  margin-top: 22px;
  margin-bottom: 60px;
}

.c2 {
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  height: 1.2rem;
}

.c4 {
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c7 {
  padding-left: 2rem;
}

.c5 {
  font-weight: 600;
  padding: 0 0.6rem;
}

.c8 {
  color: #7d7d7d;
}

.c9 {
  width: 12rem;
  display: inline-block;
}

.c17 > div {
  margin: 0.4rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="container c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            data-cy="filters__button"
            onClick={[Function]}
          >
            <span
              className="c5"
            >
               
            </span>
          </button>
        </div>
        <div
          className="c6"
        >
          <span
            className="c7"
            data-cy="no-of-products-found_label"
          >
            <span
              className="c8"
            >
              Productos encontrados: 
            </span>
            255
          </span>
          <span
            className="c7"
          >
            <div
              className="c9"
            >
              <div
                className="c10"
                data-cy="dropdown-select"
              >
                <div
                  className="c11"
                >
                  <div
                    className="css-1pcexqc-container"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="c12"
                      data-cy="dropdown-select-input"
                      onClick={[Function]}
                    >
                      <span
                        className="c13"
                      >
                        Ordenar por:
                      </span>
                      <div
                        className="c14"
                      >
                         
                      </div>
                      <div
                        className="c15"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="#21125E"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c16"
                  />
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        className="c17"
      />
    </div>
  </div>
  <div
    className="c18"
  />
</div>
`;

exports[`Storyshots @components/molecules/ProductListHeader with active filters 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c19 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c14 {
  color: #7d7d7d;
  display: inline-block;
  white-space: pre;
}

.c12 {
  padding-top: 1.4rem;
  margin-bottom: 1.875rem;
}

.c17 {
  top: 100%;
}

.c11 {
  width: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 0.5rem;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c16 {
  right: 1rem;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c1 {
  background-color: #f1f5f5;
  margin-top: 22px;
  margin-bottom: 60px;
}

.c2 {
  height: 5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.875rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  height: 1.2rem;
}

.c4 {
  font-size: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c6 {
  padding-left: 2rem;
  cursor: pointer;
  font-size: 0.875rem;
  color: #7d7d7d;
}

.c8 {
  padding-left: 2rem;
}

.c5 {
  font-weight: 600;
  padding: 0 0.6rem;
}

.c9 {
  color: #7d7d7d;
}

.c10 {
  width: 12rem;
  display: inline-block;
}

.c18 > div {
  margin: 0.4rem;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="container c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <button
            className="c4"
            data-cy="filters__button"
            onClick={[Function]}
          >
            <span
              className="c5"
            >
               
              <span>
                (
                3
                )
              </span>
            </span>
          </button>
          <button
            className="c6"
            onClick={[Function]}
          >
            Limpiar filtros
          </button>
        </div>
        <div
          className="c7"
        >
          <span
            className="c8"
            data-cy="no-of-products-found_label"
          >
            <span
              className="c9"
            >
              Productos encontrados: 
            </span>
            255
          </span>
          <span
            className="c8"
          >
            <div
              className="c10"
            >
              <div
                className="c11"
                data-cy="dropdown-select"
              >
                <div
                  className="c12"
                >
                  <div
                    className="css-1pcexqc-container"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="c13"
                      data-cy="dropdown-select-input"
                      onClick={[Function]}
                    >
                      <span
                        className="c14"
                      >
                        Ordenar por:
                      </span>
                      <div
                        className="c15"
                      >
                         
                      </div>
                      <div
                        className="c16"
                        rotate="false"
                      >
                        <svg
                          height={10}
                          viewBox="0 0 32 32"
                          width={10}
                        >
                          <path
                            d="M16 29.856l-15.999-27.712h31.999l-15.999 27.712z"
                            fill="#21125E"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    className="c17"
                  />
                </div>
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        className="c18"
      />
    </div>
  </div>
  <div
    className="c19"
  />
</div>
`;
